--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,17 @@ h1{
 p{
     padding:0 5%;
     font-size:1.2em
-    /* margin:0 5% */
     
+}
+
+#trial-con{
+    background-color: hsl(248, 32%, 49%);
+    margin:30px 10%;
+    width: 300px;
+    height: 120px;
+    padding:15px 25px;
+    border-radius: 10px;
+}
+#trial-text{
+    line-height: 1.6;
 }
