--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html{
     box-sizing: border-box;
 }
 body{
+    /* position: relative; */
     margin: 0;
     padding: 50px 0 0 0;
     text-align: center;
@@ -48,4 +49,16 @@ p{
 }
 #form-con{
     background-color: white;
+    margin: 0 10%;
+    padding: 20px 0;
+    border-radius: 10px;
+}
+input{
+    width:90%;
+    height:60px;
+    margin:10px 0;
+    padding:0 5%;
+    border-radius: 10px;
+    border: 1px solid hsl(246, 25%, 77%)
+
 }
