--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,29 @@ input{
     margin:10px 0;
     padding:0 5%;
     border-radius: 10px;
-    border: 1px solid hsl(246, 25%, 77%)
+    border: 1px solid hsl(246, 25%, 77%);
+}
 
+button{
+    width:90%;
+    background-color: hsl(154, 59%, 51%);
+    color:white;
+    height:60px;
+    border-radius: 10px;
+    font-size: 1em;
+    text-transform: uppercase;
+    padding: 0 10%;
+    margin-left:10px;
+    border: 1px solid hsl(246, 25%, 77%);
+}
+
+#terms{
+    color:hsl(246, 25%, 77%);
+    font-size: 0.7em;
+    margin:10%;
+    padding:10px;
+    line-height: 1.6;
+}
+span{
+    color:hsl(0, 100%, 74%)
 }
