--- a/css/styles.css
+++ b/css/styles.css
@@ -85,3 +85,9 @@ button{
 span{
     color:hsl(0, 100%, 74%)
 }
+
+@media screen and (min-width:1440px){
+   body{ display:grid
+                    
+}
+}
