created a main container in the markup and made it a grid container

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ span{
 
 
 @media screen and (min-width:1440px){
-   body{ 
+   #main-con{ 
        display:grid;
     grid-template:1fr/1fr 1fr;
                     
