--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,9 @@ span{
     font-size:0.7em;
     display: none;
 }
-
+#password{
+    margin-bottom:10px
+}
 
 
 @media screen and (min-width:1440px){
